Added tests for the user model

--- a/test/fixtures/users.yml
+++ b/test/fixtures/users.yml
@@ -2,10 +2,10 @@ ada:
   provider: github
   uid: 12345
   email: ada@adadevelopersacademy.org
-  username: countess_ada
+  name: countess_ada
 
 grace:
   provider: github
   uid: 13371337
   email: grace@hooper.net
-  username: graceful_hopps
+  name: graceful_hopps
