--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -5,6 +5,7 @@ leash:
   description: small blue leash
   photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
   user_id: 1
+  product_status: active
 
 collar: 
   name: collar
@@ -13,3 +14,4 @@ collar:
   description: small blue collar
   photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
   user_id: 2
+  product_status: inactive
