remove comments and binding pry

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -1,3 +1,13 @@
+collar: 
+  name: collar
+  price: 15.00
+  stock: 1
+  description: small blue collar
+  photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
+  user_id: 2
+  product_status: inactive
+ 
+
 leash: 
   name: leash
   price: 5.99
@@ -6,15 +16,7 @@ leash:
   photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
   user_id: 1
   product_status: active
-
-collar: 
-  name: collar
-  price: 15.00
-  stock: 1
-  description: small blue collar
-  photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
-  user_id: 2
-
+ 
 
 doghouse: 
   name: doghouse
@@ -23,8 +25,8 @@ doghouse:
   description: small blue doghouse
   photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
   user_id: 3
-
-
+  product_status: active
+  
 bowl: 
   name: bowl
   price: 15.00
@@ -32,8 +34,8 @@ bowl:
   description: small blue bowl
   photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
   user_id: 4
-
-
+  product_status: active
+ 
 bones: 
   name: bones
   price: 15.00
@@ -41,8 +43,8 @@ bones:
   description: small blue bones
   photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
   user_id: 5
-
-
+  product_status: active
+  
 dish: 
   name: dish
   price: 15.00
@@ -50,3 +52,6 @@ dish:
   description: small blue dish
   photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
   user_id: 6
+  product_status: active
+
+
