--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -22,7 +22,7 @@ leash:
   stock: 10
   description: small blue leash
   photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
-  user_id: 1
+  user: grace
   product_status: active
  
 
