added tests for create, destroy and changing order item status in order item controller

--- a/test/fixtures/products.yml
+++ b/test/fixtures/products.yml
@@ -4,13 +4,63 @@ collar:
   stock: 1
   description: small blue collar
   photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
-  user_id: 2
-  product_status: active
+  user: ada
+  product_status: inactive
 
 leash: 
   name: leash
   price: 5.99
   stock: 10
+  description: small blue leash
+  photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
+  user: grace
+  product_status: active
+ 
+
+doghouse: 
+  name: doghouse
+  price: 15.00
+  stock: 1
+  description: small blue doghouse
+  photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
+  user: ada
+  product_status: active
+  
+bowl: 
+  name: bowl
+  price: 15.00
+  stock: 5
+  description: small blue bowl
+  photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
+  user: ada
+  product_status: active
+ 
+bones: 
+  name: bones
+  price: 15.00
+  stock: 1
+  description: small blue bones
+  photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
+  user: ada
+  product_status: active
+  
+dish: 
+  name: dish
+  price: 15.00
+  stock: 1
+  description: small blue dish
+  photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
+  user: ada
+  product_status: active
+
+rubber_duck:
+  name: rubber duck
+  price: 20.00
+  stock: 20
+  description: toy!
+  photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
+  user: ada
+  product_status: active
   description: small blue leash
   photo_url: https://dogtime.com/assets/uploads/2011/03/puppy-development-1280x720.jpg
   user_id: 1
